css/style.css
/* ... */
/* Bootstrap Lightbox using Modal */

#profile-grid { overflow: auto; white-space: normal; }
#profile-grid .profile { padding-bottom: 40px; }
#profile-grid .panel { padding: 0 }
#profile-grid .panel-body { padding: 15px }
#profile-grid .profile-name { font-weight: bold; }
#profile-grid .thumbnail {margin-bottom:6px;}
#profile-grid .panel-thumbnail { overflow: hidden; }
#profile-grid .img-rounded { border-radius: 4px 4px 0 0;}


.image-slider-home{
    padding-top: 90px;
    margin-left: 44px;
}

img.img-fluid.mx-auto.d-block {
    width: 252px;
    height: 120px;
    height: auto;
    float: left;
    margin: 3px;
    padding: 3px;
    border: 2px solid;
}


a.carousel-control-next.text-faded.btn_next{
    background-color: black;
    /* left: -32px !important; */
    left: -41px !important;
    width: 42px !important;
}

a.carousel-control-prev.btn_prev {
    background: black;
    right: 10px;
    width: 39px;
    left: unset;
}
.carousel-inner
{
    padding-left: 19px;
}

.sr-only{
    display: contents;
}
span.contact-no {
    line-height: 52px;
    font-size: 30px;
}


@media (max-width: 575px){
    .contact-no{
        font-size: 30px;
    }
}

@media screen and (max-width: 600px){
     .text-bg h1 {
          visibility: hidden;
          color: rgb(248, 242, 242);
          padding-top: 50px;
          font-size: 40px;
          line-height: 94px;
         padding-bottom: 5px;
         font-weight: bold;
      }
      
      .text-bg span {
          visibility: hidden;
         font-size:25px;
          display: block;
          color: rgb(249, 245, 245);
          line-height: 35px;
          padding-bottom: 50px;
      }

      a.carousel-control-prev.btn_prev {
        right: 5px !important;
        left: unset;
    }
    .carousel-inner
    {
        padding-left: 0px !important;
    }
    .logo a img {
        margin-left: -15%;
        margin-top: -10%;
        height: 215px;
        width: 348px;
    }
    .mean-container .mean-bar{
        margin-top: -70px;
    }
    .contact-no{
        font-size: 30px !important;
    }
    .how_it_work {
        font-size: 17px;
        text-align: center;
        padding: 21px;
        font-weight: 500;
    }
    .titlepage {
        text-align: center;
        padding-bottom: 20px !important;
    }
    .best_img.croos_rt {
        margin-top: 0px;
    }
    .gallery_section {
        margin-top: 41px;
    }
    .carousel-inner {
        padding-left: 0px !important;
    }
}



/* For Desktop View */
@media screen and (min-width: 1024px) {
    .mobile_view,.bannerMobileImg{
        display: none;
    }
    .desktop_view, .bannerDestopImg{
        display: block;
    }
    .how_it_work {
        font-size: 27px;
        text-align: center;
        font-weight: inherit;
    }
    .bannerDestopImg{
        margin-left: 134px;
    }
    .best_img.croos_rt {
        margin-top: 80px;
    }
    .carousel-item {
        margin-left: -9px !important;
    }
  }
   
  /* For Tablet View */
  @media screen and (min-device-width: 768px)
  and (max-device-width: 1024px) {
    .desktop_view,.bannerDestopImg{
        display: none;
    }
    .mobile_view,.bannerMobileImg{
        display: block;
    }
  }
   
  /* For Mobile Portrait View */
  @media screen and (max-device-width: 480px)
  and (orientation: portrait) {
    .desktop_view,.bannerDestopImg{
        display: none;
    }
    .mobile_view,.bannerMobileImg{
        display: block;
    }
  }
   
  /* For Mobile Landscape View */
  @media screen and (max-device-width: 640px)
  and (orientation: landscape) {
    .desktop_view,.bannerDestopImg{
        display: none;
    }
    .mobile_view,.bannerMobileImg{
        display: block;
    }
  }
   
  /* For Mobile Phones Portrait or Landscape View */
  @media screen and (max-device-width: 640px) {
    .desktop_view,.bannerDestopImg{
        display: none;
    }
    .mobile_view,.bannerMobileImg{
        display: block;
    }
  }
   
  /* For iPhone 4 Portrait or Landscape View */
  @media screen and (min-device-width: 320px)
  and (-webkit-min-device-pixel-ratio: 2) {
    .desktop_view,.bannerDestopImg{
        display: none;
    }
    .mobile_view,.bannerMobileImg{
        display: block;
    }
  }
   
  /* For iPhone 5 Portrait or Landscape View */
  @media (device-height: 568px) and (device-width: 320px)
  and (-webkit-min-device-pixel-ratio: 2) {
    .desktop_view,.bannerDestopImg{
        display: none;
    }
    .mobile_view,.bannerMobileImg{
        display: block;
    }
  }
   
  /* For iPhone 6 and 6 plus Portrait or Landscape View */
  @media (min-device-height: 667px) and (min-device-width: 375px)
  and (-webkit-min-device-pixel-ratio: 3) {
    .desktop_view,.bannerDestopImg{
        display: none;
    }
    .mobile_view,.bannerMobileImg{
        display: block;
    }
  }

